@@ -1,10 +1,11 @@
 package leave_room;
 
+import entities.Room;
+import entities.User;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 import database.*;
-import models.*;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -13,7 +14,7 @@ import static org.mockito.Mockito.*;
 
 public class LeaveRoomInteractorTest {
     private LeaveRoomInteractor leaveRoomInteractor;
-    private RoomDBGateway roomDBGatewayMock;
+    private LeaveRoomDBGateway roomDBGatewayMock;
     private LeaveRoomOutputBoundary leaveRoomOutputBoundaryMock;
     private int roomID;
     private int userID;
@@ -25,25 +26,31 @@ public class LeaveRoomInteractorTest {
         userID = 111;
         userID2 = 222;
 
-        roomDBGatewayMock = Mockito.mock(RoomDBGateway.class);
+        roomDBGatewayMock = Mockito.mock(LeaveRoomDBGateway.class);
         leaveRoomOutputBoundaryMock = Mockito.mock(LeaveRoomOutputBoundary.class);
         leaveRoomInteractor = new LeaveRoomInteractor(roomDBGatewayMock, leaveRoomOutputBoundaryMock);
     }
 
     @Test
     public void testLeaveRoomSuccessfully() {
-        RoomDBModel room = new RoomDBModel(roomID, new ArrayList<>(Arrays.asList(userID, userID2)), userID2, "Test Room", "");
+        Room.setRoom(roomID, "Test Room", userID2, new ArrayList<>(Arrays.asList(userID, userID2)), ""); // simulate getting a room
+        User.setUser(userID, "", ""); // simulate logging in a user
+
+        RoomDBModel room = new RoomDBModel(roomID, "Test Room", userID2, new ArrayList<>(Arrays.asList(userID, userID2)),"");
         when(roomDBGatewayMock.getARoom(roomID)).thenReturn(room);
-        leaveRoomInteractor.leaveRoom(roomID, userID);
+        leaveRoomInteractor.leaveRoom();
         verify(roomDBGatewayMock, times(1)).leaveARoom(room);
-        verify(leaveRoomOutputBoundaryMock, times(1)).prepareJoinOrHostView(userID);
+        verify(leaveRoomOutputBoundaryMock, times(1)).prepareJoinOrHostView();
     }
 
     @Test
     public void testLeaveRoomFailed() {
-        RoomDBModel room = new RoomDBModel(roomID, new ArrayList<>(Arrays.asList(userID2)), userID2, "Test Room", "");
+        Room.setRoom(roomID, "Test Room", userID2, new ArrayList<>(List.of(userID2)), ""); // simulate getting a room
+        User.setUser(userID, "", ""); // simulate logging in a user
+
+        RoomDBModel room = new RoomDBModel(roomID, "Test Room", userID2, new ArrayList<>(List.of(userID2)),"");
         when(roomDBGatewayMock.getARoom(roomID)).thenReturn(room);
-        leaveRoomInteractor.leaveRoom(roomID, userID);
+        leaveRoomInteractor.leaveRoom();
         verify(roomDBGatewayMock, never()).leaveARoom(room);
         verify(leaveRoomOutputBoundaryMock, times(1)).prepareFailedToLeaveRoomView();
     }
